# lem-in

./: CMakeLists.txt  Makefile  error.c  handle.c  lem_in.h  main.c  validation.c
maps/: #1#  1  10  17  18  2  21  22  23  24  25  26  28  4  5  6  7  8
printflibft/: get_next_line.c
printflibft/types/: ._binary.c  ._char.c  ._integer.c  ._none.c  ._notation.c  ._notation_help.c  ._percent.c  ._string.c  ._unsigned.c  ._wchar.c  ._wstr.c
src/: assistance.c  directions.c  error.c  generate.c  handle.c  main.c  motion.c  race.c  validation.c
