cmake_minimum_required(VERSION 3.7)
project(lem_in)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        printflibft/libft/ft_abs.c
        printflibft/libft/ft_atoi.c
        printflibft/libft/ft_bzero.c
        printflibft/libft/ft_isalnum.c
        printflibft/libft/ft_isalpha.c
        printflibft/libft/ft_isascii.c
        printflibft/libft/ft_isdigit.c
        printflibft/libft/ft_isprint.c
        printflibft/libft/ft_itoa.c
        printflibft/libft/ft_lstadd.c
        printflibft/libft/ft_lstdel.c
        printflibft/libft/ft_lstdelone.c
        printflibft/libft/ft_lstiter.c
        printflibft/libft/ft_lstmap.c
        printflibft/libft/ft_lstnew.c
        printflibft/libft/ft_max_div.c
        printflibft/libft/ft_memalloc.c
        printflibft/libft/ft_memccpy.c
        printflibft/libft/ft_memchr.c
        printflibft/libft/ft_memcmp.c
        printflibft/libft/ft_memcpy.c
        printflibft/libft/ft_memdel.c
        printflibft/libft/ft_memmove.c
        printflibft/libft/ft_memset.c
        printflibft/libft/ft_numlen.c
        printflibft/libft/ft_numulen.c
        printflibft/libft/ft_power.c
        printflibft/libft/ft_putchar.c
        printflibft/libft/ft_putchar_fd.c
        printflibft/libft/ft_putendl.c
        printflibft/libft/ft_putendl_fd.c
        printflibft/libft/ft_putnbr.c
        printflibft/libft/ft_putnbr_fd.c
        printflibft/libft/ft_putnchr.c
        printflibft/libft/ft_putnstr.c
        printflibft/libft/ft_putstr.c
        printflibft/libft/ft_putstr_fd.c
        printflibft/libft/ft_putunbr.c
        printflibft/libft/ft_strcat.c
        printflibft/libft/ft_strchr.c
        printflibft/libft/ft_strclr.c
        printflibft/libft/ft_strcmp.c
        printflibft/libft/ft_strcpy.c
        printflibft/libft/ft_strdel.c
        printflibft/libft/ft_strdup.c
        printflibft/libft/ft_strequ.c
        printflibft/libft/ft_striter.c
        printflibft/libft/ft_striteri.c
        printflibft/libft/ft_strjoin.c
        printflibft/libft/ft_strlcat.c
        printflibft/libft/ft_strlen.c
        printflibft/libft/ft_strmap.c
        printflibft/libft/ft_strmapi.c
        printflibft/libft/ft_strncat.c
        printflibft/libft/ft_strncmp.c
        printflibft/libft/ft_strncpy.c
        printflibft/libft/ft_strnequ.c
        printflibft/libft/ft_strnew.c
        printflibft/libft/ft_strnstr.c
        printflibft/libft/ft_strrchr.c
        printflibft/libft/ft_strrev.c
        printflibft/libft/ft_strsplit.c
        printflibft/libft/ft_strstr.c
        printflibft/libft/ft_strsub.c
        printflibft/libft/ft_strtrim.c
        printflibft/libft/ft_swap.c
        printflibft/libft/ft_tolower.c
        printflibft/libft/ft_toupper.c
        printflibft/libft/ft_vig_coder.c
        printflibft/libft/ft_vig_decoder.c
        printflibft/libft/libft.h
        printflibft/types/binary.c
        printflibft/types/char.c
        printflibft/types/integer.c
        printflibft/types/none.c
        printflibft/types/notation.c
        printflibft/types/notation_help.c
        printflibft/types/percent.c
        printflibft/types/string.c
        printflibft/types/unsigned.c
        printflibft/types/wchar.c
        printflibft/types/wstr.c
        printflibft/ft_printf.c
        printflibft/ft_printf.h
        printflibft/get_next_line.c
        printflibft/get_next_line.h
        printflibft/qualifier_definition.c
        printflibft/type_definition.c
        error.c
        handle.c
        lem_in.h
        main.c
        validation.c)

add_executable(lem_in ${SOURCE_FILES})